# jarvis

./: .cache  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.en.md  build_exe.bat  build_logo.py  installer.iss  jarvis.spec  main.py  pyproject.toml  readme.md  requirements.txt  setup_shortcuts.ps1  test_icloud.py  ui.py
actions/: accountant_tools.py  analytics.py  analyze_file.py  apple_integration.py  architect.py  architect_tools.py  brightness_control.py  browser_agent.py  calendar_manager.py  calorie_tracker.py  clipboard_manager.py  code_runner.py  context_awareness.py  creative_companion.py  currency_converter.py  cyber_tools.py  daily_briefing.py  file_search.py  file_write.py  game_mode.py  gold_tracker.py  google_workspace.py  health_guardian.py  macro_automator.py  night_mode.py  open_app.py  password_security.py  plan_and_execute.py  proactive_monitor.py  process_guard.py  random_fact.py  reminder.py  screenshot_ocr.py  send_message.py  spotify_control.py  task_manager.py  translate.py  tts_engine.py  unit_converter.py  universal_remote.py  (+9 more)
agent/: initiative_engine.py
config/: __init__.py  tool_declarations.py
core/: circadian.py  config.py  emotion_engine.py  live_state.py  logging_setup.py  personality.py  personality_evolution.py  prompt.txt
dashboard/: reactor.html  server.py
memory/: _jsoncache.py  config_manager.py  deep_bond.py  episodic.py  goals_engine.py  long_term.json  memory_manager.py  routines.py  social_graph.py  transcripts.py  usage_tracker.py  vault.py  vector_memory.py
tests/: conftest.py  test_architect.py  (+6 more)
(+1 files in other folders)
